testdata/baselines/reference/submodule/compiler/declarationEmitObjectLiteralAccessorsJs1.errors.txt
index.js(48,7): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
index.js(48,9): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== index.js (2 errors) ====
    // same type accessors
    export const obj1 = {
      /**
       * my awesome getter (first in source order)
       * @returns {string}
       */
      get x() {
        return "";
      },
      /** 
       * my awesome setter (second in source order)
       * @param {string} a
       */
      set x(a) {},
    };
    
    // divergent accessors
    export const obj2 = {
      /** 
       * my awesome getter
       * @returns {string}
       */
      get x() {
        return "";
      },
      /** 
       * my awesome setter
       * @param {number} a
       */
      set x(a) {},
    };
    
    export const obj3 = {
      /**
       * my awesome getter
       * @returns {string}
       */
      get x() {
        return "";
      },
    };
    
    export const obj4 = {
      /**
       * my awesome setter
       * @param {number} a
       */
      set x(a) {},
          ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
            ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    };
    